# PurduePHYS580

./: .gitignore  CMakeLists.txt  PHYS-580-Survey.lyx  README.md  mcint.py
Chapter1/: template.cpp
Chapter1/src/: Makefile
Chapter2/: Chapter2.ipynb
Chapter2/src/: Makefile  exercise2_1.cpp  exercise2_2.cpp  exercise2_3.cpp
Homework/HW1/: HW1.html  HW1.ipynb  HW1.py  coordinates.lyx  coordinates.lyx~
Homework/HW2/: HW2.html  HW2.ipynb  HW2.lyx  HW2.lyx~  HW2.py
Homework/HW2/bifurcation/: CMakeLists.txt  main.cpp
Homework/HW2/bifurcation/figures/: bifurcation.gnuplot
Homework/HW2/bifurcation/include/: bifurcation.hpp
Homework/HW2/poincare/: CMakeLists.txt  main.cpp
Homework/HW2/poincare/figures/: poincare.gnuplot
Homework/HW3/: HW3.lyx  HW3.lyx~  HW3out.ipynb  HW3out.py
Homework/HW4/: HW4out.ipynb  HW4out.py
Homework/HW5/: ClusterGrowth.py  ClusterGrowthClass.py  HW5out.html  HW5out.ipynb  IsingModel.py  cluster.py
Homework/HW6/: HW6out.html  HW6out.ipynb  Problem2.mov  boi.md
Labs/Lab01/: Lab1-decay.m  lab1out.py
Labs/Lab03/: Lab3in.pptx  Lab3out.html  Lab3out.py  lab3-pendulum.py
Labs/Lab04/: Lab4-pendulumRK2.m  Lab4in.pptx  Lab4out.html
Labs/Lab05/: Lab5in-two_planets.m  Lab5in.m  Lab5out.html  lab5-two_planets.py
Labs/Lab06/: Lab6out.ipynb  (+1 more)
Project/: Ideas.md  Projectout.ipynb
includes/: compphys.cpp  compphys.hpp
legacy/: Makefile  compphys.cpp  compphys.hpp  exercise1_1.cpp  exercise1_2.cpp  exercise1_3.cpp  exercise1_4.cpp  exercise1_5.cpp  exercise2_16.cpp  exercise2_2.cpp  exercise2_4.cpp  exercise2_5.cpp  template.cpp
lib/: Constants.py  DSolve.py  FindRoot.py  NDSolveSystem.py  Utilities.py  test_DSolve.py
notebooks/: Chapter1.ipynb
src/: NDSolveSystem.py  exercise1_1.py  exercise1_2.py
src/c++/: CMakeLists.txt
src/c++/Chapter 10/Problem10_1/: CMakeLists.txt  main.cpp
src/c++/Chapter 10/Problem10_2/: CMakeLists.txt
src/c++/Chapter 10/Problem10_2/include/: initialize.h  norm.h  run.h  store.h
src/c++/Chapter 10/Problem10_2/plotting/: output.txt
src/c++/Chapter 10/Problem10_3/include/: run.h  store.h
src/c++/Chapter 10/Problem10_3/plotting/: output.txt
src/c++/Chapter 10/Problem10_3/src/: main.cpp
src/c++/include/: Problem3_17.h  Problem3_18.h
src/c++/plotting/: Problem3_17.txt  Problem3_17_3D.txt  Problem3_17_zoomed.txt  Problem3_18.txt
src/c++/src/: main.cpp
(+179 files in other folders)
